--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=TimesheetModule
 
 
-spring.datasource.url=jdbc:mysql://manikanta.mysql.database.azure.com:3306/timesheets_db?createDatabaseIfNotExist=true
-spring.datasource.username=ravi
-spring.datasource.password=ravi@123
+spring.datasource.url=jdbc:mysql://localhost:3306/timesheets_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 
 spring.jpa.hibernate.ddl-auto=update
